--- a/test-1.html
+++ b/test-1.html
@@ -866,12 +866,12 @@
                     <div style="position: relative; height: 460px; background: #fafafa; border-radius: 8px; padding: 45px 10px 50px 10px; box-sizing: border-box; width: 100%;">
                         <div style="position: absolute; top: 15px; right: 20px; z-index: 10; background: rgba(12, 35, 64, 0.05); border: 1px solid #0c2340; padding: 6px 14px; border-radius: 20px; display: flex; align-items: center; gap: 8px;">
                             <span style="font-family: 'Montserrat', sans-serif; font-size: 0.8em; font-weight: 700; color: #0c2340;">Adj. Avg:</span>
-                            <span style="font-family: 'Oswald', sans-serif; font-size: 1.2em; font-weight: 700; color: #0c2340;">71.0</span>
+                            <span style="font-family: 'Oswald', sans-serif; font-size: 1.2em; font-weight: 700; color: #0c2340;">70.80</span>
                         </div>
                         <canvas id="archiveOfficialChart"></canvas>
                         <div style="position: absolute; bottom: 12px; left: 15px; right: 15px; display: flex; justify-content: space-between; font-family: 'Montserrat', sans-serif; font-size: 0.72em; color: #888; border-top: 1px dashed #ccc; padding-top: 10px; font-weight: 600; text-transform: uppercase;">
                             <span>SOURCE: SCOREBOARD.CLIPPD, WAGR & GOLFSTAT</span>
-                            <span>CUMULATIVE: 6 EVENTOS / 18 RONDAS</span>
+                            <span>CUMULATIVE: 7 EVENTOS / 21 RONDAS</span>
                         </div>
                     </div>
                     <p style="font-family: 'Montserrat', sans-serif; font-size: 0.7em; color: #999; margin-top: 10px; padding-left: 5px;">* Special Invitational Event (Non-NCAA D1 Regular Season)</p>
@@ -896,10 +896,10 @@
     new Chart(ctxOfficialArchive, {
         type: 'line',
         data: {
-            labels: ['9/07 (Argent)', '9/15 (Highlands)', '9/22 (Badger)', '10/05 (Trinity)', '12/27 (Patriot)*', '2/01 (Compadres)'],
+            labels: ['9/07 (Argent)', '9/15 (Highlands)', '9/22 (Badger)', '10/05 (Trinity)', '12/27 (Patriot)*', '2/01 (Compadres)', '2/24 (Military)'],
             datasets: [{
                 label: 'Scoring Avg',
-                data: [69.66, 71.66, 72.66, 74.00, 72.00, 72.00],
+                data: [69.66, 71.66, 72.66, 74.00, 72.00, 72.00, 71.66],
                 borderColor: '#0c2340',
                 backgroundColor: 'rgba(12, 35, 64, 0.05)',
                 borderWidth: 2,
@@ -914,7 +914,7 @@
                     align: 'top', anchor: 'end', offset: 8, color: '#0c2340',
                     font: { weight: '700', size: 13 },
                     formatter: function(value, context) {
-                        return ['T9', 'T12', 'T24', 'T55', 'T38', 'T3'][context.dataIndex];
+                        return ['T9', 'T12', 'T24', 'T55', 'T38', 'T3', '1'][context.dataIndex];
                     }
                 }
             }]
@@ -930,7 +930,7 @@
                     grid: { color: '#efefef', drawBorder: false }, 
                     ticks: { font: { size: 11, weight: '600' }, color: '#333' },
                     title: {
-                        display: true,
+                        display: false,
                         text: 'Strokes',
                         color: '#333',
                         font: { size: 12, weight: '700' }
@@ -953,19 +953,20 @@
                         afterLabel: function(context) {
                             const i = context.dataIndex;
                             return [
-                                `● Rounds: ${['70-70-69 (-7)', '74-71-70 (-1)', '71-71-76 (+2)', '75-73-74 (+6)', '71-73-72 (+6)', '70-75-71 (E)'][i]}`,
-                                `● Rank: ${['T9', 'T12', 'T24', 'T55', 'T38', 'T3'][i]}`,
-                                `-----------------------`,
-                                `● WAGR Pwr: ${['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033'][i]}`,
-                                `● Pts.: ${['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774'][i]}`,
+                                `● Rounds: ${['70-70-69 (-7)', '74-71-70 (-1)', '71-71-76 (+2)', '75-73-74 (+6)', '71-73-72 (+6)', '70-75-71 (E)', '69-72-74 (-1)'][i]}`,
+                                `● Rank: ${['T9', 'T12', 'T24', 'T55', 'T38', 'T3', '1'][i]}`,
                                 [
-                                    `● Rank ▲ 151`,
-                                    `● Rank ▲ 28`,
-                                    `● Rank ▼ 38`,
-                                    `● Rank ▼ 98`,
+                                    `● Rank Impact ▲ 151`,
+                                    `● Rank Impact ▲ 28`,
+                                    `● Rank Impact ▼ 38`,
+                                    `● Rank Impact ▼ 98`,
                                     null,
-                                    `● Rank ▲ 142`
-                                ][i]
+                                    `● Rank Impact ▲ 142`,
+                                    `● Rank Impact ▲ 72`
+                                ][i],
+                                `-----------------------`,
+                                `● WAGR Pwr: ${['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033', ''][i]}`,
+                                `● Pts.: ${['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774', '9.2734'][i]}`
                             ].filter(v => v !== null);
                         }
                     }
