--- a/test-1.html
+++ b/test-1.html
@@ -1092,8 +1092,8 @@
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px; color: #333;">Feb 23-24, 2026</div>
               <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 6px;">
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Military City Collegiate (UTSA)</div>
-               <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Military City Collegiate (UTSA) | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div>
+               <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/player" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                   <polyline points="15 3 21 3 21 9"></polyline>
@@ -1103,17 +1103,19 @@
                   </div>
               
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX</div>
+              Rank Impact: ▲ 72 | SG: 0.16 | Weighted Pts: 51.52
+              WAGR Pwr: 101.3382 / Pts.: 9.2734
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="color: #333; font-weight: 800;">-</span></div>
-                <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="color: #333; font-weight: 800;">-</span></div>
-                <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="color: #333; font-weight: 700;">-</span></div>
-                <div class="ms-item"><span class="ms-label" style="color: #333;">FINISH</span><span class="ms-value" style="color: #333; font-weight: 700;">-</span></div>
+                <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="color: #333; font-weight: 800;">color: #333;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</span></div>
+                <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="font-weight: 800; color: #e11d48;">215</span></div>
+                <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="font-weight: 700; color: #e11d48;">-</span>-1</div>
+                <div class="ms-item"><span class="ms-label" style="color: #333;">FINISH</span><span class="ms-value" style="color: #333; font-weight: 700;">1</span></div>
               </div>
             </td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #333; font-weight: 800;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</td>
+            <td class="hide-mobile" style="color:  #0047AB; font-weight: 800;">215</td>
+            <td class="hide-mobile" style="color:  #0047AB; font-weight: 700;">-3</td>
+            <td class="hide-mobile" style="color: #333; font-weight: 700;">1</td>
           </tr>
 
           <tr>
