--- a/test-1.html
+++ b/test-1.html
@@ -1092,17 +1092,16 @@
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px; color: #333;">Feb 23-24, 2026</div>
               <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 6px;">
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Military City Collegiate (UTSA) | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div>
-               <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/player" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Military City Collegiate (UTSA)
+                <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/player" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                   <polyline points="15 3 21 3 21 9"></polyline>
                    <line x1="10" y1="14" x2="21" y2="3"></line>
                  </svg>
-               </a>
-                  </div>
-              
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX</div>
+                </a>
+             </div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div></div>
               Rank Impact: ▲ 72 | SG: 0.16 | Weighted Pts: 51.52
               WAGR Pwr: 101.3382 / Pts.: 9.2734
               <div class="mobile-status-bar">
