--- a/test-1.html
+++ b/test-1.html
@@ -1102,6 +1102,7 @@
                 </a>
              </div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div></div>
+               <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
               Rank Impact: ▲ 72 | SG: 0.16 | Weighted Pts: 51.52
               WAGR Pwr: 101.3382 / Pts.: 9.2734
               <div class="mobile-status-bar">
