--- a/test-1.html
+++ b/test-1.html
@@ -1103,7 +1103,7 @@
              </div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div></div>
                <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
-              Rank Impact: ▲ 72 | SG: 0.16 | Weighted Pts: 51.52
+              Rank Impact: <span style="color:#16a34a;">▲</span>72 | SG: 0.16 | Weighted Pts: 51.52
               WAGR Pwr: 101.3382 / Pts.: 9.2734
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="color: #333; font-weight: 800;">color: #333;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</span></div>
