--- a/test-1.html
+++ b/test-1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+        <!DOCTYPE html>
 <head>
 
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png" sizes="32x32">
@@ -1846,10 +1846,10 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
         </p>
         <p style="margin: 0 0 12px 0;">
-          <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Compadres Collegiate</b>, rounds at <b>Iberostar Playa Paraíso GC (Par 72)</b> concluded at <b>Even Par</b> relative to the field scoring average (77.10).
+          <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Military City Collegiate</b>, rounds at <b>TPC San Antonio — The Canyons Course (Par 72)</b> concluded at <b>−1</b> relative to the field scoring average (R1: 76.16 | R3: 79.03).
         </p>
         <p style="margin: 0;">
-          <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
+          <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>94.4% (17/18 rounds — freshman season cumulative)</b>.
         </p>
       </div>
     </div>
