--- a/test-1.html
+++ b/test-1.html
@@ -1108,12 +1108,12 @@
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="color: #333; font-weight: 800;">color: #333;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</span></div>
                 <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="font-weight: 800; color: #e11d48;">215</span></div>
-                <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="font-weight: 700; color: #e11d48;">-</span>-1</div>
+                <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="font-weight: 700; color: #e11d48;">-1</span></div>
                 <div class="ms-item"><span class="ms-label" style="color: #333;">FINISH</span><span class="ms-value" style="color: #333; font-weight: 700;">1</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #333; font-weight: 800;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</td>
-            <td class="hide-mobile" style="color:  #0047AB; font-weight: 800;">215</td>
+            <td class="hide-mobile" style="color:  #e11d48; font-weight: 800;">215</td>
             <td class="hide-mobile" style="color:  #0047AB; font-weight: 700;">-3</td>
             <td class="hide-mobile" style="color: #333; font-weight: 700;">1</td>
           </tr>
