--- a/test-1.html
+++ b/test-1.html
@@ -1114,7 +1114,7 @@
             </td>
             <td class="hide-mobile" style="color: #333; font-weight: 800;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</td>
             <td class="hide-mobile" style="color:  #e11d48; font-weight: 800;">215</td>
-            <td class="hide-mobile" style="color:  #0047AB; font-weight: 700;">-3</td>
+            <td class="hide-mobile" style="color:  #e11d48; font-weight: 700;">-1</td>
             <td class="hide-mobile" style="color: #333; font-weight: 700;">1</td>
           </tr>
 
