--- a/code/index-ongoing-final.html
+++ b/code/index-ongoing-final.html
@@ -699,7 +699,8 @@ gtag('config', 'G-H1JW8YBDZ8');
         </a>
       </object>
     </h3>
-    <p style="margin: 0; font-weight: 800; font-size: 16px; color: #333; background: #f8f9fa; display: inline-block; padding: 2px 8px; border-radius: 6px;">Score: <span style="color: #e11d48;">69</span>-72-74 (215) | <span style="color: #e11d48;">1st</span></p>
+    <p style="margin: 0; font-weight: 800; font-size: 16px; color: #333; background: #f8f9fa; display: inline-block; padding: 2px 8px; border-radius: 6px;">
+      Score: <span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74 (<span style="color: #e11d48;">215</span>) | 1st</p>
     
     <div style="margin-top: 25px; padding-top: 20px; border-top: 1px dashed #eee; color: #444; font-size: 14px; line-height: 1.8;">
       <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
