--- a/test-1.html
+++ b/test-1.html
@@ -17,55 +17,19 @@
 
 <script type="application/ld+json">
 {
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Joshua Hong",
-  "birthDate": "2007",
-  "gender": "Male",
-  "nationality": [
-    {
-      "@type": "Country",
-      "name": "Mexico"
-    },
-    {
-      "@type": "Country",
-      "name": "South Korea"
-    }
-  ],
-  "jobTitle": "Collegiate Golfer",
-  "memberOf": {
-    "@type": "SportsTeam",
-    "name": "UTSA Men's Golf",
-    "parentOrganization": {
-      "@type": "CollegeOrUniversity",
-      "name": "University of Texas at San Antonio",
-      "abbreviation": "UTSA"
-    }
-  },
+  "@context": "https://schema.org", "@type": "Person", "name": "Joshua Hong", "birthDate": "2007", "gender": "Male", "nationality": [  { "@type": "Country",  "name": "Mexico"  }, 
+  { "@type": "Country", "name": "South Korea" } ], "jobTitle": "Collegiate Golfer", "memberOf": {"@type": "SportsTeam", "name": "UTSA Men's Golf", "parentOrganization": {
+      "@type": "CollegeOrUniversity", "name": "University of Texas at San Antonio", "abbreviation": "UTSA" } },
   "description": "NCAA Division I golfer at UTSA. Two-time FMG National Junior Champion (2023–2025) and two-time consecutive Regional Champion across Zona GADO and Zona Centro.",
-  "award": [
-    "FMG National Junior Championship Winner (2023-2024 Season)",
-    "FMG National Junior Championship Winner (2024-2025 Season)",
-    "Zona GADO Regional Season Champion (2023-2024)",
-    "Zona Centro Regional Season Champion (2024-2025)",
-    "Billy Dettlaff Sportsmanship Award (The Junior Players Championship)"
-  ],
-  "knowsAbout": ["Competitive Golf", "NCAA Division I Athletics"],
-  "url": "https://joshuahonggolf.com"
-}
+  "award": [ "FMG National Junior Championship Winner (2023-2024 Season)", "FMG National Junior Championship Winner (2024-2025 Season)", "Zona GADO Regional Season Champion (2023-2024)",
+    "Zona Centro Regional Season Champion (2024-2025)", "Billy Dettlaff Sportsmanship Award (The Junior Players Championship)" ], "knowsAbout": ["Competitive Golf", "NCAA Division I Athletics"],
+  "url": "https://joshuahonggolf.com" }
 </script>
     
 <script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-
+window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
 // Google Analytics 4 Configuration
-gtag('config', 'G-H1JW8YBDZ8', {
-'page_title': 'Joshua Hong Official Site',
-'send_page_view': true,
-'cookie_flags': 'SameSite=None;Secure'
-});
+gtag('config', 'G-H1JW8YBDZ8', { 'page_title': 'Joshua Hong Official Site', 'send_page_view': true, 'cookie_flags': 'SameSite=None;Secure' });
 
 // Bookmark & Return Visitor Tracking Logic
 if (window.performance && window.performance.navigation.type === 0) {
