--- a/test-1.html
+++ b/test-1.html
@@ -924,7 +924,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
   <div class="insight-scroll-container" style="display: flex; gap: 20px; overflow-x: auto; padding: 10px 5px 25px 5px; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch;">
     
-    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 300px; max-width: 450px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between; position: relative; border: 1px solid rgba(201,138,46,0.2);">
+    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 320px; max-width: 500px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between; position: relative; border: 1px solid rgba(201,138,46,0.3);">
       <div>
         <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
           <div style="display: flex; align-items: center;">
@@ -933,7 +933,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
             </div>
             <h3 style="font-size: 20px; color: #c98a2e; margin: 0; font-weight: 800;">Latest Insight</h3>
           </div>
-          <span style="font-size: 10px; font-weight: 800; color: #fff; background: #c98a2e; padding: 4px 12px; border-radius: 50px;">NEW</span>
+          <span style="font-size: 10px; font-weight: 800; color: #fff; background: #c98a2e; padding: 4px 12px; border-radius: 50px;">NEW ENTRY</span>
         </div>
         <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px;">
           <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Military City Collegiate — TPC San Antonio</p>
@@ -941,71 +941,92 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Technical calibration remains focused on tournament continuity.</p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 15px;">Posted On: Feb 25, 2026</div>
+      <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 20px;">Posted On: Feb 25, 2026</div>
     </div>
 
-    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 300px; max-width: 450px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between;">
+    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 320px; max-width: 500px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between;">
       <div>
         <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
           <div style="display: flex; align-items: center;">
             <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
             </div>
-            <h3 style="font-size: 20px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
+            <h3 style="font-size: 22px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
           </div>
+          <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
+            <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%;"></span>
+            SPRING OPENER
+          </span>
         </div>
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px;">
-          <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Spring Season Opener — Cancun, Mexico</p>
-          <p style="margin-bottom: 8px;">Travel began before 4:00 a.m., including ground transportation from San Antonio to Austin... (중략)</p>
-          <p style="margin-bottom: 0; color: #fff; font-weight: 700;">Ranked No. 403 (Moved from No. 523).</p>
+        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px; text-align: left;">
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener — Cancun, Mexico</p>
+          <p style="margin-bottom: 12px;">
+          Travel began before 4:00 a.m., including ground transportation from San Antonio to Austin, followed by connecting flights through Dallas to Cancun. Upon arrival, preparation focused on course and putting green familiarization ahead of competition.
+          </p>
+          <p style="margin-bottom: 12px;">Round 1 was played in high-wind conditions. Driver accuracy varied, while scoring was maintained through short-game execution. The round concluded at 70 (-2).</p>
+          <p style="margin-bottom: 12px;">In Round 2, driver dispersion affected play, including an early double bogey. Birdies on the front nine were followed by dropped strokes on the back nine. Scrambling limited further score impact. The round concluded at 75 (+3).</p>
+          <p style="margin-bottom: 12px;">Round 3 showed improved driver alignment under continued wind conditions. The round concluded at 71 (-1).</p>
+          <p style="margin-bottom: 12px;">Joshua finished the tournament at Even Par, placing T3, with only two players ahead.</p>
+          <p style="margin-bottom: 12px; color: #fff; font-weight: 700;">As a result, his national ranking moved from No. 523 to No. 403.</p>
+          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Preparation continues with ongoing driver accuracy calibration.</p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 15px;">Posted On: Feb 4, 2026</div>
+      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: Feb 4, 2026</div>
     </div>
 
-    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 300px; max-width: 450px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between;">
+    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 320px; max-width: 500px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between;">
       <div>
-        <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+        <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px;">
           <div style="display: flex; align-items: center;">
             <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
             </div>
-            <h3 style="font-size: 20px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
+            <h3 style="font-size: 22px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
           </div>
+          <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
+            <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%;"></span>
+            CURRENT FOCUS
+          </span>
         </div>
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px;">
-          <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Winter Preparation & Assessment</p>
-          <p style="margin-bottom: 8px;">January training was structured around refining long-iron dispersion and reinforcing short-game execution...</p>
+        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px; text-align: left;">
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Winter Preparation & Competitive Assessment</p>
+          <p style="margin-bottom: 15px;">January training was structured around refining <strong>long-iron dispersion</strong> and reinforcing <strong>short-game execution</strong>, with the objective of stabilizing scoring opportunities from mid-to-long range.</p>
+          <p style="margin-bottom: 15px;">Performance during the Jan 22–23 qualifying rounds (R1–R2) reflected improved ball-striking consistency under competitive conditions. During Round 3, a separate data point was recorded as Joshua tested aggressive driving lines on the Oaks Course in a <strong>high-margin scenario</strong>. This round provided useful feedback on driver control and decision-making under full-power execution.</p>
+          <p style="margin-bottom: 15px;">A corrective training session followed on Jan 29 at TPC San Antonio, focusing on driver alignment and short-game touch to recalibrate feel and reestablish R1–R2 performance benchmarks.</p>
+          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Preparation continues with the goal of entering the Spring season fully calibrated and ready to contribute consistently across all competitive rounds.</p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 15px;">Posted On: Jan 26, 2026</div>
+      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: JAN 26, 2026</div>
     </div>
 
-    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 300px; max-width: 450px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between;">
+    <div class="insight-card-item" style="flex: 0 0 85%; min-width: 320px; max-width: 500px; scroll-snap-align: start; background: #111; border-radius: 25px; padding: 35px 30px; color: white; box-shadow: 0 15px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; justify-content: space-between;">
       <div>
-        <div style="display: flex; align-items: center; margin-bottom: 15px;">
+        <div style="display: flex; align-items: center; margin-bottom: 25px;">
           <div style="background: rgba(148, 163, 184, 0.1); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(148, 163, 184, 0.3);">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
           </div>
-          <h3 style="font-size: 20px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
+          <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
         </div>
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 20px;">
-          <p style="margin: 0 0 10px 0; color: #fff; font-weight: 700; font-size: 16px;">Fall Review & Strategic Focus</p>
-          <p style="margin-bottom: 0;">The Patriot All-America Invitational served as a competitive reference point against a national amateur field...</p>
+        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; text-align: left;">
+          <p style="margin: 0 0 18px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus</p>
+          <p style="margin-bottom: 18px;">The <b>Patriot All-America Invitational</b> served as a competitive reference point against a <b>national amateur field</b>, including several of the <b>top collegiate players</b>. Following the event, a <b>technical review</b> identified <strong>long-iron performance</strong> as an area for improvement ahead of <b>Spring qualifying</b>.</p>
+          <p style="margin-bottom: 18px;">In coordination with the <b>UTSA coaching staff</b>, a <b>short-term adjustment</b> was approved for Joshua to remain on campus and continue <strong>individual training during January</strong> rather than participate in the scheduled team trip.</p>
+          <p style="margin-bottom: 0;">This period was used to address identified <b>technical areas</b> prior to <b>Spring qualifying rounds</b> and subsequent team events. Joshua continues preparation within the <b>UTSA program</b> for the <b>Spring season</b>.</p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 15px;">Posted On: Dec 2025</div>
+      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: DEC 2025</div>
     </div>
 
   </div>
 
   <style>
+    /* 스크롤바 디자인 및 레이아웃 제어 */
     .insight-scroll-container::-webkit-scrollbar { height: 6px; }
     .insight-scroll-container::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 10px; }
     .insight-scroll-container::-webkit-scrollbar-thumb { background: #c98a2e; border-radius: 10px; }
     
     @media (max-width: 480px) {
-      .insight-card-item { flex: 0 0 92%; }
+      .insight-card-item { flex: 0 0 92%; padding: 25px 20px; }
     }
   </style>
 </div>
