--- a/test-1.html
+++ b/test-1.html
@@ -933,13 +933,25 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
             </div>
             <h3 style="font-size: 20px; color: #c98a2e; margin: 0; font-weight: 800;">Latest Insight</h3>
           </div>
-          <span style="font-size: 10px; font-weight: 800; color: #fff; background: #c98a2e; padding: 4px 12px; border-radius: 50px;">NEW ENTRY</span>
+          <span style="font-size: 10px; font-weight: 800; color: #fff; background: #c98a2e; padding: 4px 12px; border-radius: 50px;">6th Event</span>
         </div>
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px;">
-          <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Military City Collegiate — San Antonio, Texas</p>
-          <p style="margin-bottom: 10px;">Temperature declined prior to competition. Round 1 was delayed approximately one hour due to frost. **Wind gusts approached 40 km/h**. Course setup at **TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)** reflected PGA-level yardage, green speed, and pin positioning.<br>**Round 1: 69 (−3), lead.** Field average: 76.16.<br><br>**Round 2: Even Par.** Cumulative −3, second position.<br><br>**Round 3: Field average 79.03** under elevated wind and firm setup. Tournament concluded at **−1**.<br>**Result**<br>**Individual Champion**<br>**Team Champion**<br>**Only player under par**<br><br>Driver and long-iron dispersion remained stable under wind. Proximity variance observed under crosswind. Greenside execution functional. Putting adaptation variance noted under tournament-speed greens.<br><br>Post-event review of **Clippd and WAGR metrics** indicated narrower ranking differential relative to elevated field scoring conditions.<br><br>Preparation shifts to **Golden Nugget Invitational**. Academic obligations addressed midweek.</p>
-          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Technical calibration remains focused on tournament continuity.</p>
-        </div>
+       <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px; text-align: left;">
+    <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Military City Collegiate — San Antonio, Texas</p>
+    <p style="margin-bottom: 10px;">
+        Temperature declined prior to competition. Round 1 was delayed approximately one hour due to frost. **Wind gusts approached 40 km/h**. Course setup at **TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)** reflected PGA-level yardage, green speed, and pin positioning.<br>
+        **Round 1: 69 (−3), lead.** Field average: 76.16.<br><br>
+        **Round 2: Even Par.** Cumulative −3, second position.<br><br>
+        **Round 3: Field average 79.03** under elevated wind and firm setup. Tournament concluded at **−1**.<br>
+        **Result**<br>
+        **Individual Champion**<br>
+        **Team Champion**<br>
+        **Only player under par**<br><br>
+        Driver and long-iron dispersion remained stable under wind. Proximity variance observed under crosswind. Greenside execution functional. Putting adaptation variance noted under tournament-speed greens.<br><br>
+        Post-event review of **Clippd and WAGR metrics** indicated narrower ranking differential relative to elevated field scoring conditions.<br><br>
+        Preparation shifts to **Golden Nugget Invitational**. Academic obligations addressed midweek.
+    </p>
+    <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Technical calibration remains focused on tournament continuity.</p>
+</div>
       </div>
       <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 20px;">Posted On: Feb 25, 2026</div>
     </div>
