--- a/test-1.html
+++ b/test-1.html
@@ -912,17 +912,25 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       
 <div id="joshua-unique-section" style="max-width: 900px; margin: 0 auto 100px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; clear: both;">
 
-  <details style="width: 100%; cursor: pointer;">
+  <details style="width: 100%; cursor: pointer; group" open>
     <summary style="list-style: none; outline: none;">
-      <div class="intro-section" style="width: 100%; margin-bottom: 25px; box-sizing: border-box; display: flex; justify-content: space-between; align-items: center; border-left: 5px solid #c98a2e; padding-left: 20px;">
-        <h2 style="font-size: 18px; color: #0c2340; margin: 0; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 8px;">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
-            <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
-          </svg>
+      <div class="intro-section" style="width: 100%; margin-bottom: 25px; box-sizing: border-box; display: flex; justify-content: space-between; align-items: center; background: #0c2340; padding: 15px 25px; border-radius: 12px; border: 1px solid #c98a2e; box-shadow: 0 4px 15px rgba(0,0,0,0.2); transition: all 0.3s ease;">
+        <h2 style="font-size: 16px; color: #c98a2e; margin: 0; font-weight: 900; letter-spacing: 1.5px; text-transform: uppercase; display: flex; align-items: center; gap: 12px;">
+          <div style="position: relative; display: flex; align-items: center; justify-content: center;">
+            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
+              <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
+            </svg>
+            <span class="pulse-dot" style="position: absolute; top: -2px; right: -2px; width: 8px; height: 8px; background: #c98a2e; border-radius: 50%; border: 2px solid #0c2340;"></span>
+          </div>
           Present Process & Progress
         </h2>
-        <span style="font-size: 12px; color: #c98a2e; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">▼ View Details</span>
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <span style="font-size: 11px; color: #fff; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; opacity: 0.8;">Insight Archive</span>
+          <svg class="arrow-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="transition: transform 0.3s ease;">
+            <polyline points="6 9 12 15 18 9"></polyline>
+          </svg>
+        </div>
       </div>
     </summary>
 
