--- a/test-1.html
+++ b/test-1.html
@@ -911,8 +911,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
       
 <div id="joshua-unique-section" style="max-width: 900px; margin: 0 auto 100px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; clear: both;">
-
-  <details style="width: 100%; cursor: pointer; group" open>
+  
+  <details style="width: 100%; cursor: pointer;">
     <summary style="list-style: none; outline: none;">
       <div class="intro-section" style="width: 100%; margin-bottom: 25px; box-sizing: border-box; display: flex; justify-content: space-between; align-items: center; background: #0c2340; padding: 15px 25px; border-radius: 12px; border: 1px solid #c98a2e; box-shadow: 0 4px 15px rgba(0,0,0,0.2); transition: all 0.3s ease;">
         <h2 style="font-size: 16px; color: #c98a2e; margin: 0; font-weight: 900; letter-spacing: 1.5px; text-transform: uppercase; display: flex; align-items: center; gap: 12px;">
