--- a/test-1.html
+++ b/test-1.html
@@ -1096,7 +1096,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
     </div>
   </div>
 
-<div class="profile-combined-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="profile-combined-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; align-items: stretch; gap: 30px; flex-wrap: wrap; justify-content: center;">
     
     <div style="width: 280px; height: 400px; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.1); border: 1px solid #e1e8ed; flex-shrink: 0;">
