--- a/test-1.html
+++ b/test-1.html
@@ -943,7 +943,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
               <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
                 <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
               </div>
-              <h3 style="font-size: 20px; color: #c98a2e; margin: 0; font-weight: 800;">Latest Insight</h3>
+              <h3 style="font-size: 20px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
             </div>
             <span style="font-size: 10px; font-weight: 800; color: #fff; background: #c98a2e; padding: 4px 12px; border-radius: 50px;">6th Event</span>
           </div>
