--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1084,8 +1085,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
   <div style="background: white; padding: 25px; border-radius: 15px; border-left: 5px solid #3182ce; margin-top: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
     <p style="font-size: 16.5px; line-height: 1.8; color: #2d3748; margin: 0;">
-      Through five events (four Fall, one Spring), he recorded a 
-      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.0 Adjusted Scoring Average</span>. 
+      Through six events (four Fall, two Spring), he recorded a 
+      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">70.8 Adjusted Scoring Average</span>. 
       His academic record includes a 
       <span style="color: #10b981; font-weight: 800; font-size: 18px; background: rgba(16, 185, 129, 0.05); padding: 2px 6px; border-radius: 4px;">3.4 GPA (Fall 2025)</span>.
     </p>
