--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ gtag('config', 'G-H1JW8YBDZ8');
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 8px; justify-content: center;">
                 <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-1</span>
-                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(215)</span>
+                <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(<span style="color: #e74c3c;">215</span>)</span>
               </div>
             </div>
           </div>
