--- a/reference-links.html
+++ b/reference-links.html
@@ -312,7 +312,7 @@
       </p>
       <div style="width: 100%; margin-top: 15px; display: flex; align-items: center; justify-content: flex-end; gap: 0;">
         <p style="color: #94a3b8; font-size: 11px; margin: 0; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase;">
-          Last Updated: Feb 21, 2026
+          Last Updated: Feb 25, 2026
         </p>
       </div>
     </div>
@@ -383,7 +383,7 @@
             <div style="display: flex; align-items: center; flex: 1; min-width: 250px;">
               <span style="color: #F15A22; margin-right: 12px; font-size: 14px; flex-shrink: 0;">•</span>
               <span style="color: #0c2340; font-size: 14px; font-weight: 900;">Military City Collegiate (UTSA)</span>
-              <span style="margin-left: 10px; background-color: #0c2340; color: white; font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 3px; letter-spacing: 0.3px; text-transform: uppercase; white-space: nowrap;">First Collegiate Win</span>
+              <span style="margin-left: 10px; background-color: #F15A22; color: white; font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 3px; letter-spacing: 0.3px; text-transform: uppercase; white-space: nowrap;">First Collegiate Win</span>
               <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px; flex-shrink: 0;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
             </div>
             <span style="color: #94a3b8; font-family: 'Roboto Mono', monospace; font-size: 12px; padding-left: 26px;">Feb 23-24, 2026</span>
@@ -392,8 +392,7 @@
           <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/player" target="_blank" style="display: flex; align-items: flex-start; justify-content: flex-start; flex-wrap: wrap; gap: 8px; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#ffffff'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.05)'" onmouseout="this.style.backgroundColor='transparent'; this.style.boxShadow='none'">
             <div style="display: flex; align-items: center; flex: 1; min-width: 250px;">
               <span style="color: #F15A22; margin-right: 12px; font-size: 14px; flex-shrink: 0;">•</span>
-              <span style="color: #0c2340; font-size: 14px; font-weight: 900;">Compadres Collegiate (UTRGV)</span>
-              <span style="margin-left: 10px; background-color: #0c2340; color: white; font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 3px; letter-spacing: 0.3px; text-transform: uppercase; white-space: nowrap;">2026 Spring Opener</span>
+              <span style="color: #334155; font-size: 14px; font-weight: 600;">Compadres Collegiate (UTRGV)</span>
               <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px; flex-shrink: 0;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
             </div>
             <span style="color: #94a3b8; font-family: 'Roboto Mono', monospace; font-size: 12px; padding-left: 26px;">Feb 2-4, 2026</span>
