--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -983,7 +983,7 @@
   
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 24px; letter-spacing: 1px; font-weight: 900; text-transform: uppercase;">
-      SEASON PERFORMANCE SUMMARY
+      SEASON PERFORMANCE 
     </h1>
     <p style="margin: 8px 0 0; color: #7f8c8d; font-size: 14px; font-weight: 500; letter-spacing: 1px;">
       Official Tournament Results & Full Schedule
@@ -1844,14 +1844,17 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       </h4>
       <div style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
         <p style="margin: 0 0 12px 0;">
-          <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
-        </p>
-        <p style="margin: 0 0 12px 0;">
-          <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Military City Collegiate</b>, rounds at <b>TPC San Antonio — The Canyons Course (Par 72)</b> concluded at <b>−1</b> relative to the field scoring average (R1: 76.16 | R3: 79.03).
-        </p>
-        <p style="margin: 0;">
-          <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>94.4% (17/18 rounds — freshman season cumulative)</b>.
-        </p>
+  <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
+</p>
+<p style="margin: 0 0 12px 0;">
+  <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Military City Collegiate</b>, rounds at <b>TPC San Antonio — The Canyons Course (Par 72)</b> concluded at <b>−1</b> relative to the field scoring average (R1: 76.16 | R3: 79.03).
+</p>
+<p style="margin: 0 0 12px 0;">
+  <b>Rank Movement:</b> Following the individual victory at the Military City Collegiate, national ranking adjusted from No. 406 to <span style="color: #0c2340; font-weight: 900;">No. <span style="color: #e74c3c;">354</span></span> <span style="color: #0c2340; font-weight: 900;">(<span style="color: #e74c3c;">▲52</span>)</span>.
+</p>
+<p style="margin: 0;">
+  <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>94.4% (17/18 rounds — freshman season cumulative)</b>.
+</p>
       </div>
     </div>
 
