--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1843,14 +1843,14 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
         Summary & Session Log
       </h4>
       <div style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        <p style="margin: 0 0 12px 0;">
+<p style="margin: 0 0 12px 0;">
   <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
 </p>
 <p style="margin: 0 0 12px 0;">
-  <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Military City Collegiate</b>, rounds at <b>TPC San Antonio — The Canyons Course (Par 72)</b> concluded at <b>−1</b> relative to the field scoring average (R1: 76.16 | R3: 79.03).
+  <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Military City Collegiate</b>, rounds at <b>TPC San Antonio — The Canyons Course (Par 72)</b> concluded at <b>−1.</b> Field scoring averages: <b>R1 — 76.16 | R3 — 79.03.</b>
 </p>
 <p style="margin: 0 0 12px 0;">
-  <b>Rank Movement:</b> Following the individual victory at the Military City Collegiate, national ranking adjusted from No. 406 to <span style="color: #0c2340; font-weight: 900;">No. <span style="color: #e74c3c;">354</span></span> <span style="color: #0c2340; font-weight: 900;">(<span style="color: #e74c3c;">▲52</span>)</span>.
+  <b>Rank Movement:</b> National ranking adjusted from No. 406 to <span style="color: #0c2340; font-weight: 900;">No. <span style="color: #e74c3c;">354</span></span> <span style="color: #0c2340; font-weight: 900;">(<span style="color: #e74c3c;">▲52</span>)</span>.
 </p>
 <p style="margin: 0;">
   <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>94.4% (17/18 rounds — freshman season cumulative)</b>.
