--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1850,7 +1850,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Military City Collegiate</b>, rounds at <b>TPC San Antonio — The Canyons Course (Par 72)</b> concluded at <b>−1.</b> Field scoring averages: <b>R1 — 76.16 | R3 — 79.03.</b>
 </p>
 <p style="margin: 0 0 12px 0;">
-  <b>Rank Movement:</b> National ranking adjusted from No. 406 to <span style="color: #0c2340; font-weight: 900;">No. <span style="color: #e74c3c;">354</span></span> <span style="color: #0c2340; font-weight: 900;">(<span style="color: #e74c3c;">▲52</span>)</span>.
+  <b>Rank Movement:</b> National ranking adjusted from No. 406 to No. 354 ▲52.
 </p>
 <p style="margin: 0;">
   <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>94.4% (17/18 rounds — freshman season cumulative)</b>.
