--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -788,6 +788,7 @@
                             <strong>Conditions:</strong> Frost delay. Wind gusts up to 40 km/h. PGA-level course setup (distance, green speed, pin positions). <br>
                             <strong>Field Scoring Average:</strong> R1: 76.16 / R3: 79.03 <br>
                             <strong>Joshua Hong:</strong> Finish: −1. Only player under par. Individual Champion. Team Champion. <br>
+                            <strong>Rank Movement:</strong> National ranking adjusted from No. 406 to No. 354 (▲52).<br>
                             <strong>Ball Striking:</strong> Driver and long-iron dispersion maintained under crosswind. Minor proximity variance observed in elevated wind conditions. <br>
                             <strong>Short Game:</strong> Greenside execution functional under tight turf and moisture. Further proximity refinement required. <br>
                             <strong>Putting:</strong> Adaptation variance under tournament-speed greens and pin placements. Mid-range conversion below internal baseline.
