--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1107,7 +1107,7 @@
               Rank Impact: <span style="color:#16a34a;">▲</span> 72 | SG: 0.16 | Weighted Pts: 51.52<br>
               WAGR Pwr: 101.3382 / Pts.: 9.2734
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="color: #333; font-weight: 800;">color: #333;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</span></div>
+                <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="color: #333; font-weight: 800;"><span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74</span></div>
                 <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="font-weight: 800; color: #e11d48;">215</span></div>
                 <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="font-weight: 700; color: #e11d48;">-1</span></div>
                 <div class="ms-item"><span class="ms-label" style="color: #333;">FINISH</span><span class="ms-value" style="color: #333; font-weight: 700;">1</span></div>
