--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1102,7 +1102,8 @@
                  </svg>
                 </a>
              </div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div></div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX | Par 72 | 7,106 Yards</div>
+          </div>
                <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
               Rank Impact: <span style="color:#16a34a;">▲</span> 72 | SG: 0.16 | Weighted Pts: 51.52<br>
               WAGR Pwr: 101.3382 / Pts.: 9.2734
