--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </div>
       
       <div style="margin-top: 20px; font-size: 13px; color: #c98a2e; font-weight: 800; text-align: right; text-transform: uppercase; letter-spacing: 0.5px;">
-        VIEW PARTICIPANTS <span style="font-size: 16px; margin-left: 3px;">↘</span>
+        VIEW PARTICIPANTS <span style="font-size: 16px; margin-left: 3px;">↗</span>
       </div>
     </div>
   </a>
