--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -656,7 +656,7 @@
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">72</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">E</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Finish</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Fi</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">2</td>
         </tr>
 
@@ -690,7 +690,7 @@
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">74</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">+2</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">FINISH</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Final</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">1</td>
         </tr>
       </tbody>
