--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -656,7 +656,7 @@
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">72</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">E</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Fi</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Final</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">2</td>
         </tr>
 
