--- a/code/ncaa-ongoing-final.html
+++ b/code/ncaa-ongoing-final.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <head>
 
@@ -657,7 +656,7 @@
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">72</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">E</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Finish</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Final</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">2</td>
         </tr>
 
@@ -691,7 +690,7 @@
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">74</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">+2</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">FINISH</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Final</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">1</td>
         </tr>
       </tbody>
