--- a/news-media.html
+++ b/news-media.html
@@ -329,7 +329,7 @@
         <div style="border: 1px solid #0c2340; border-radius: 16px; overflow: hidden; background: #fff; box-shadow: 0 10px 20px rgba(0,0,0,0.1); transition: 0.3s; height: 100%; display: flex; flex-direction: column;">
           <div style="width: 100%; height: 280px; background: #f8f8f8; display: flex; align-items: center; justify-content: center; overflow: hidden;">
             <img src="https://joshuahayoung.github.io/lab/images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Indiviudal-Win-1.jpeg" 
-              alt="Joshua Hong Military City Individual Win" style="width: 100%; height: 100%; display: block; object-fit: cover; object-position: center 5%;;">
+              alt="Joshua Hong Military City Individual Win" style="width: 100%; height: 100%; display: block; object-fit: cover; object-position: center 3%;;">
           </div>
           <div style="padding: 25px; flex-grow: 1; display: flex; flex-direction: column; justify-content: space-between;">
             <div>
@@ -342,8 +342,8 @@
               </div>
               <p style="font-size: 14px; color: #555; line-height: 1.6; margin: 0 0 15px 0;">
                 Location: TPC San Antonio — The Canyons Course<br>
-                Status: Individual Champion / Team Champion<br>
-                Hong was the only player in the field of 69 to finish in the red, carding a 1-under-par 215.
+                Status: Team Champion / Individual Champion
+                Finished at 1-under-par 215. Only player under par in a field of 69.
               </p>
             </div>
             <div style="display: inline-block; color: #0c2340; font-weight: bold; font-size: 13px; text-decoration: underline;">
