--- a/news-media.html
+++ b/news-media.html
@@ -342,8 +342,9 @@
               </div>
               <p style="font-size: 14px; color: #555; line-height: 1.6; margin: 0 0 15px 0;">
                 Location: TPC San Antonio — The Canyons Course<br>
-                Status: Team Champion / Individual Champion
-                Finished at 1-under-par 215. Only player under par in a field of 69.
+                Status: Team Champion / Individual Champion<br>
+                Finished at 1-under-par 215.<br>
+                Only player under par in a field of 69.
               </p>
             </div>
             <div style="display: inline-block; color: #0c2340; font-weight: bold; font-size: 13px; text-decoration: underline;">
