--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </object>
     </h3>
     <p style="margin: 0; font-weight: 800; font-size: 16px; color: #333; background: #f8f9fa; display: inline-block; padding: 2px 8px; border-radius: 6px;">
-      Score: <span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74 (<span style="color: #e11d48;">215</span>) | 1st</p>
+      Score: <span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74 (<span style="color: #e11d48;">215</span>) | 1</p>
     
     <div style="margin-top: 25px; padding-top: 20px; border-top: 1px dashed #eee; color: #444; font-size: 14px; line-height: 1.8;">
       <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
