--- a/test-1.html
+++ b/test-1.html
@@ -569,7 +569,7 @@ gtag('config', 'G-H1JW8YBDZ8');
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 8px; justify-content: center;">
                 <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-1</span>
-                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(215)</span>
+                <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(<span style="color: #e74c3c;">215</span>)</span>
               </div>
             </div>
           </div>
@@ -677,7 +677,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </div>
       
       <div style="margin-top: 20px; font-size: 13px; color: #c98a2e; font-weight: 800; text-align: right; text-transform: uppercase; letter-spacing: 0.5px;">
-        VIEW PARTICIPANTS <span style="font-size: 16px; margin-left: 3px;">↘</span>
+        VIEW PARTICIPANTS <span style="font-size: 16px; margin-left: 3px;">↗</span>
       </div>
     </div>
   </a>
@@ -700,7 +700,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </object>
     </h3>
     <p style="margin: 0; font-weight: 800; font-size: 16px; color: #333; background: #f8f9fa; display: inline-block; padding: 2px 8px; border-radius: 6px;">
-      Score: <span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74 (<span style="color: #e11d48;">215</span>) | 1st</p>
+      Score: <span style="color: #e11d48;">69</span>-<span style="color: #0047AB;">72</span>-74 (<span style="color: #e11d48;">215</span>) | 1</p>
     
     <div style="margin-top: 25px; padding-top: 20px; border-top: 1px dashed #eee; color: #444; font-size: 14px; line-height: 1.8;">
       <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
@@ -949,20 +949,15 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           </div>
           <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px; text-align: left;">
             <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Military City Collegiate — San Antonio, Texas</p>
-            <p style="margin-bottom: 10px;">
-              Temperature declined prior to competition. Round 1 was delayed approximately one hour due to frost. **Wind gusts approached 40 km/h**. Course setup at **TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)** reflected PGA-level yardage, green speed, and pin positioning.<br>
-              **Round 1: 69 (−3), lead.** Field average: 76.16.<br><br>
-              **Round 2: Even Par.** Cumulative −3, second position.<br><br>
-              **Round 3: Field average 79.03** under elevated wind and firm setup. Tournament concluded at **−1**.<br>
-              **Result**<br>
-              **Individual Champion**<br>
-              **Team Champion**<br>
-              **Only player under par**<br><br>
-              Driver and long-iron dispersion remained stable under wind. Proximity variance observed under crosswind. Greenside execution functional. Putting adaptation variance noted under tournament-speed greens.<br><br>
-              Post-event review of **Clippd and WAGR metrics** indicated narrower ranking differential relative to elevated field scoring conditions.<br><br>
-              Preparation shifts to **Golden Nugget Invitational**. Academic obligations addressed midweek.
-            </p>
-            <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Technical calibration remains focused on tournament continuity.</p>
+<p style="margin-bottom: 10px;">
+  Temperature declined prior to competition, and Round 1 was delayed approximately one hour due to frost. <b>Wind gusts approached 25 mph</b> throughout the event. The course at <b>TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)</b> was set at <b>PGA-level yardage, green speed, and pin positioning.</b><br><br>
+  <b>Round 1 concluded at 69 (−3)</b>, establishing the lead. The <b>field scoring average was 76.16</b>. <b>Round 2 concluded at Even Par</b>, moving to <b>−3 cumulative and second position</b> entering the final round. <b>Round 3</b> was played under continued wind and firm conditions, with the <b>field scoring average rising to 79.03</b>. The tournament concluded at <b>−1</b>.<br><br>
+  Joshua finished as <b>Individual Champion</b> and contributed to the <b>Team Championship</b> as the <b>only player under par</b>.<br><br>
+  National ranking adjusted from <b>No. 406 to No. 354 (▲52)</b>.<br><br>
+  <b>Driver and long-iron dispersion</b> remained stable relative to wind exposure. Minor <b>proximity variance</b> was observed under crosswind conditions. <b>Greenside execution</b> remained functional. <b>Putting adaptation variance</b> was noted under tournament-speed greens.<br><br>
+  Post-event review of <b>Clippd and WAGR metrics</b> indicated a narrower ranking differential relative to observed field scoring dispersion. Preparation transitions to <b>Golden Nugget Invitational</b>, with midweek allocated to academic completion and technical calibration.
+</p>
+<p style="margin-bottom: 0; color: #fff; font-weight: 600;">Technical calibration remains focused on tournament continuity.</p>
           </div>
         </div>
         <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 20px;">Posted On: Feb 25, 2026</div>
@@ -1084,8 +1079,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
   <div style="background: white; padding: 25px; border-radius: 15px; border-left: 5px solid #3182ce; margin-top: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
     <p style="font-size: 16.5px; line-height: 1.8; color: #2d3748; margin: 0;">
-      Through five events (four Fall, one Spring), he recorded a 
-      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.0 Adjusted Scoring Average</span>. 
+      Through six events (four Fall, two Spring), he recorded a 
+      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">70.8 Adjusted Scoring Average</span>. 
       His academic record includes a 
       <span style="color: #10b981; font-weight: 800; font-size: 18px; background: rgba(16, 185, 129, 0.05); padding: 2px 6px; border-radius: 4px;">3.4 GPA (Fall 2025)</span>.
     </p>
